src/Gateways/Envoy/config/web-gateway/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: promag_backend_route
                  virtual_hosts:
                    - name: promag_backend
                      domains:
                        - "*"
                      routes:
                        - name: "p-short"
                          match:
                            prefix: "/p/"
                          route:
                            auto_host_rewrite: true
                            prefix_rewrite: "/"
                            cluster: personaldata
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /tmp/access.log
                    filter:
                      not_health_check_filter: { }

  clusters:
    - name: personaldata
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: personaldata
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: personal-data-api
                      port_value: 5003
